# wavey

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  template.html
.github/workflows/: check.yml  deploy.yml
wavey/: __main__.py  common.py  grib.py  map.py  nwfs.py
wavey/apps/: superimpose.py
wavey/templates/: index.html.j2
