[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "wavey"
version = "0.1.0"
authors = [
    {name = "Kevin Chen"},
]
description = "Visualizing nearshore wave forecasts for Monterey scuba diving"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "basemap",
    "basemap-data-hires",
    "beautifulsoup4",
    "jinja2",
    "matplotlib",
    "mpld3",
    "numpy",
    "pillow>=9.1",
    "pygrib",
    "requests",
    "tqdm",
    "tyro",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
    "types-requests",
    "types-tqdm",
]

[[tool.mypy.overrides]]
module = [
    "mpl_toolkits.basemap",
    "mpld3",
    "pygrib",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.uv.build-backend]
module-name = "wavey"
module-root = ""
